--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@
     <nav class="navbar">
       <img class="logo" src="logoko.png">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Gallery.html">Gallery</a></li>
+        <li><a href="index">Home</a></li>
+        <li><a href="Gallery">Gallery</a></li>
         <li><a class="active" href="#About">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact">Contact</a></li>
 
       </ul>
       </nav>
