--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <img class="logo" src="logoko.png">
     <ul>
       <li><a class="active" href="#Home">Home</a></li>
-      <li><a href="Gallery.html">Gallery</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="Gallery">Gallery</a></li>
+      <li><a href="about">About</a></li>
+      <li><a href="contact">Contact</a></li>
     </ul>
   </nav>
   <div class="container">
@@ -27,7 +27,7 @@
         <p>Welcome to My Portfolio! Explore my tech projects and skills while glimpsing into the story of my life's journey, 
           seamlessly integrating the world of IT and the essence of living.  </p>
 
-        <button><a href="contact.html">Get in    touch</a></button>
+        <button><a href="contact">Get in    touch</a></button>
     </div>
     <div class="photo">
         <img src="dpnew.png" alt="John Nebrej">
