--- a/Gallery.html
+++ b/Gallery.html
@@ -14,10 +14,10 @@
   <nav class="navbar">
     <img class="logo" src="logoko.png">
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index">Home</a></li>
       <li><a class="active" href="#Home">Gallery</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="about">About</a></li>
+      <li><a href="contact">Contact</a></li>
     </ul>
   </nav>
  
