--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
       <nav class="navbar">
          <img class="logo" src="logoko.png">
          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Gallery.html">Gallery</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index">Home</a></li>
+            <li><a href="Gallery">Gallery</a></li>
+            <li><a href="about">About</a></li>
             <li><a class="active" href="#Contact">Contact</a></li>
          </ul>
       </nav>
