--- a/about.html
+++ b/about.html
@@ -97,39 +97,39 @@
           <h1>Educational Background</h1>
           <div class="school-info">
             <img src="sb.png" alt="School Logo">
-            <div class="school-name">St. Benedicts Academy</div>
+            <div class="school-name">St. Benedicts Academy - 2007 to 2009</div>
           </div>
           <div class="school-info">
             <img src="gwcs.png" alt="School Logo">
-            <div class="school-name">Guinobatan West Central School</div>
+            <div class="school-name">Guinobatan West Central School - 2009 to 2015</div>
           </div>
           <div class="school-info">
             <img src="morms.png" alt="School Logo">
-            <div class="school-name">Marcial O. Rañola Memorial School</div>
+            <div class="school-name">Marcial O. Rañola Memorial School - 2015 to 2021</div>
           </div>
           <div class="school-info">
             <img src="cs.png" alt="School Logo">
-            <div class="school-name">Bicol University College of Science</div>
+            <div class="school-name">Bicol University College of Science - 2021 to Present</div>
           </div>
         </section>
 
         <section class="edubackground">
-          <h1>Achievement</h1>
+          <h1>LIfe Achievements</h1>
           <div class="school-info">
             <img src="medal.png" alt="School Logo">
-            <div class="school-name">St. Benedicts Academy</div>
+            <div class="school-name">International Performer of the Year</div>
           </div>
           <div class="school-info">
             <img src="medal.png" alt="School Logo">
-            <div class="school-name">Guinobatan West Central School</div>
+            <div class="school-name">Most Versatile Player</div>
           </div>
           <div class="school-info">
             <img src="medal.png" alt="School Logo">
-            <div class="school-name">Marcial O. Rañola Memorial School</div>
+            <div class="school-name">Breakthrough Artist</div>
           </div>
           <div class="school-info">
             <img src="medal.png" alt="School Logo">
-            <div class="school-name">Bicol University College of Science</div>
+            <div class="school-name">Anak ni mama</div>
           </div>
         </section>
       </div>
