--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <div class="aboutcontent">
         <section class="imagesection">
           <h1> Oops I fell </h1>
-          <img src="dpnew.png">
+          <img src="picpic2.png">
 
         </section>
         <section class="infosection">
@@ -77,7 +77,7 @@
            <div class="skills">
             <div class="subject">Creativity</div>
             <div class="progbar">
-              <div class="progbarline" value= "32%" style="max-width: 32%";></div>
+              <div class="progbarline" value= "3%" style="max-width: 58%";></div>
             </div>
           </div>
            <div class="skills">
